# clangbuilder

./: .gitignore  Builder.ps1  ClangBuilderPSvNext.ps1  ClangSetupEnvNext.ps1  ClangbuilderUI.lnk  ExternalLibs.md  Install.bat  InstallClangSetupvNext.ps1  LICENSE  PowerShell.Setting-Unrestricted.bat  PowerShell.Setting.bat  ReadMe.md  Update.ps1  install.bat
Repositories/: PackageList.ps1  python.ini
WebInstaller/: install.ps1
config/: Package.Resources.ps1  build.template.json  config.ps1  devi.json  devinstall.json  ewdk.json  ewdk.template.json  initialize.json  initialize.ps1  latest.json  lldbenv.json  llvm.json  packages.json  pkinit.template.json  prebuilt.json  precompiled.json  repositories.ini  repositories.json  revision.json  settings.template.json  vsenv.json
doc/: index.md
docs/: BuildLLDB.md  index.md  llvm-helpful.md
modules/CMake/: CMake.psm1
modules/Devi/: Devi.psm1
modules/Devinstall/: Devinstall.psm1
modules/Initialize/: Initialize.psm1
modules/LLVM/: LLVM.psm1
modules/Launcher/: Launcher.psm1
modules/NetTLS/: NetTLS.psm1
modules/PM/: PM.psm1
modules/Utils/: Utils.psm1
modules/VisualStudio/: VisualStudio.psm1
patch/: libcxx-msvc-cxx17.patch
ports/: 7z.json  ag.json  arc.json  aria2.json  bat.json  cmake.json  curl.json  deno.json  dmd.json  fd.json  git.json  gnuutils.json  hg.json  innoextract.json  innounp.json  jom.json  mach2.json  nasm.json  neovim.json  ninja.json  nsis.json  nuget.json  openssh.json  perl5.json  pijul.json  procs.json  putty.json  python2.json  python3.json  radare.json  ripgrep.json  shfmt.json  swigwin.json  unrar.json  vswhere.json  watchexec.json  wget.json  xz.json
script/: Bootstrap.ps1  CompileUI.bat  DevAll.bat  InitializeEnv.bat  ReadMe.md  UpdatePkgs.bat  VisualCppEnv.bat  VisualCppToolsFetch.bat  Windows7SDK-vs2015-x64.bat  Windows7SDK-vs2015-x86.bat  Windows7SDK-vs2017-x64.bat  Windows7SDK-x64.bat  Windows7SDK-x64.ps1  Windows7SDK.ps1  WindowsDefenderFilter.ps1
sources/: .clang_complete  .gitignore  CMakeLists.txt  ReadMe.md
sources/ClangbuilderUI/: .gitignore  CMakeLists.txt  ClangbuilderUI.cpp  ClangbuilderUI.rc  ClangbuilderUI.vcxproj  MainWindow.cpp  MainWindow.h  Makefile  cmVSSetupHelper.cxx
sources/Posh/: Posh.cpp  Posh.manifest  Posh.rc
sources/baltic/: balti.cc  balti.rc  balti.sln  balti.vcxproj  balti.vcxproj.filters  pch.h  resources.h  visualsearch.cc  window.cc
sources/basal-link/: basal-link.cc  basal-link.rc
sources/baulk/: 7z.cc  CMakeLists.txt  baulk.cc  baulk.hpp  cleanup.cc  commands.search.cc  compiler.cc  compiler.hpp  decompress.cc  decompress.hpp  download.cc  fs.cc  fs.hpp  indicators.hpp  indicators_test.cc  jsonex.hpp  launcher.cc  launcher.hpp  msi.cc  process.cc  process.hpp  rcwriter.hpp  utils.cc  version.h  windl.cc  windl_test.cc  xml.hpp  zip.cc
sources/blast/: CMakeLists.txt  Makefile  blast.cc  blast.hpp  blast.manifest  blast.rc  blast.sln  blast.vcxproj  blastex.hpp  driver.cc  dumpbin.cc  pe.cc  pe.hpp  readlink.cc  reparse.h  reparsepoint.hpp  resolve.cc  resolve.hpp  symlink.cc
sources/cbui/: CMakeLists.txt  ClangbuilderUI.cpp  ClangbuilderUI.rc  ClangbuilderUI.sln  ClangbuilderUI.vcxproj  MainWindow.cpp  Makefile  MessageWindow.cpp  VisualStudioSearch.cpp  app.hpp  app.rc  appdo.cc  appexec.cc  appui.cc  appui.hpp  appuires.h  apputils.cc  cmVSSetupHelper.cxx  main.cc  settings.cc  stdafx.h  vssearch.cc  vssearch.hpp
sources/cbui/cmake/: cmVSSetupHelper.cxx  cmVSSetupHelper.h
sources/cbui/inc/: apphelp.hpp  argvbuilder.hpp  base.hpp  comutils.hpp  sdkver.hpp  settings.hpp  string.hpp  systemtools.hpp  vsinstance.hpp  vssearch.hpp  vssetup.hpp
sources/cbui/res/: appuires.h
sources/cbui/vssetup/: cmVSSetupHelper.cxx  cmVSSetupHelper.h  cmsys.hpp
sources/clangbuilder/: clangbuilder.cc
sources/cli/: CMakeLists.txt  Makefile  blast.cc  cli.cc  cmdex.cc  coreutils.cc  pe.hpp
sources/dlw/: bali.json  balisrc.json  dlw.go
sources/include/: appfs.hpp  argv.hpp  argv_test.cc  argvbuilder.hpp  base.hpp  comutils.hpp  mapview.hpp  numbers.hpp  parseargv.hpp  strcat.hpp  systemtools.hpp  vsinstance.hpp  vssetup.hpp
sources/pwshex/: Makefile  powsh.rc  (+4 more)
sources/test/: BasicWindowExtended64.asm  BasicWindowExtended64.txt  CMakeLists.txt  PythonResolve.ps1  build.txt  cmakeflags.bat  cmakeflags.ps1  dl.ps1  filename.cc  findcmd.bat  findcommand.ps1  flatpkg.ps1  imgbt.cc  launcher_test.bat  launcher_test.ps1  messagebox-win64.asm  pesubsystem.ps1  regsdk.cc  setmanifest.txt  switchtest.ps1  vsenv.cc  xmlsdk.cc
sources/test/uwp/: D3D11AppView.cpp  D3D11AppView.h  pch.h
test/: Ps.ps1  VisualCppTools.ps1  cmakeflags.ps1  process.ps1
tools/: BuildNative.bat  BuildNetTools.bat  ClangbuilderUI.bat  ClangbuilderUITask.bat  CleanNetTools.bat  CleanTask.bat  Install.ps1  LastVisualCppToolsEnv.bat  LauncherTask.bat  Restore.bat  RestoreLastMSVC.bat  RestoreLastVisualCppTools.ps1  RestoreUtilitytools.ps1  RestoreVisualCppBuildToolsFull.ps1  VisualStudioBuildGit.ps1
tools/ClangbuilderUI/: .gitignore  CMakeLists.txt  Clangbuilder.h  ClangbuilderUI.cpp  ClangbuilderUI.manifest  ClangbuilderUI.rc  ClangbuilderUI.sln  ClangbuilderUI.vcxproj  ClangbuilderUI.vcxproj.filters  MainWindow.cpp  MainWindow.h  Makefile  MessageWindow.cpp  MessageWindow.h  Setup.Configuration.h  VisualStudioSearch.cpp  WindowsUtil.cpp  cmVSSetupHelper.cxx  cmVSSetupHelper.h  stdafx.cpp  stdafx.h
tools/ClangbuilderUI/ClangbuilderUI/: App.config  App.xaml  App.xaml.cs  ClangbuilderUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  packages.config
tools/ClangbuilderUI/ClangbuilderUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
tools/Launcher/: .gitignore  Arguments.hpp  CMakeLists.txt  CommandLineArgumentsEx.cxx  CommandLineArgumentsEx.hpp  GetOptInc.cpp  GetOptInc.h  Launcher.exe.manifest  Launcher.rc  Launcher.res  Makefile.mk  Precompiled.cpp  Precompiled.h  cleanBuild.bat  launcher.cpp  launcher.sln  launcher.vcxproj  launcher.vcxproj.filters  launcher_new.cpp  resource.h
unix/: clangbuilder  mainline  released  version
(+82 files in other folders)
